I've added the delete_path to the edit page.only the owner of the upload can edit the photo.

--- a/app/views/pictures/edit.html.erb
+++ b/app/views/pictures/edit.html.erb
@@ -3,4 +3,5 @@
 <%= render 'form', picture: @picture %>
 
 <%= link_to 'Show', @picture %> |
-<%= link_to 'Back', pictures_path %>
+<%= link_to 'Back', pictures_path %> |
+<%= link_to 'Delete', picture_path(@picture), method: :delete, data: { confirm: 'Are you sure?' } %>
