--- a/app/assets/stylesheets/pictures.scss
+++ b/app/assets/stylesheets/pictures.scss
@@ -10,3 +10,9 @@
     box-shadow: 10px 15px 20px;
     transition: .3s;
 }
+
+img.img-show {
+    border: 2px solid #ddd;
+    border-radius: 4px;
+    padding: 5px;
+}
