--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -6,19 +6,17 @@
 </p>
 
 <p>
-  <strong>Url:</strong>
-  <%= @picture.url %>
-</p>
+  <strong>Image</strong>
+  </p>
+  <figure>
+  <%= image_tag @picture.url, class: "img-show", style: 'max-width: 100%; height: 20rem;' %>
+  </figure>
 
 <p>
   <strong>Description:</strong>
   <%= @picture.description %>
 </p>
 
-<p>
-  <strong>User:</strong>
-  <%= @picture.user_id %>
-</p>
 
 <% if logged_in? && (current_user.id == @picture.user_id) %>
 <%= link_to 'Edit', edit_picture_path(@picture) %> |
