--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -2,12 +2,12 @@
 
 @import url('https://fonts.googleapis.com/css?family=Merriweather:400,700'); 
 
-$white: white; $black: black; 
+$white: white; $black: rgb(126, 18, 153); 
 .navbar { margin-bottom: 0; background: $black; } 
 body { background: $black; color: $white; font-family: 'Merriweather', sans-serif; } 
 h1, h2 { font-weight: bold; } 
 p { font-size: 16px; color: $white; } 
-a:visited { color: $black; } 
+a:visited { color: $grey } 
 .jumbotron { background: #0048CD; color: $white; text-align: center; 
 p { color: $white; font-size: 26px; } } .link { color: $white; } 
 
