--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -15,8 +15,7 @@
         <% if current_user %>
           <%= link_to 'Log Out', logout_path, method: :delete %>
     <% else %>
-      <%= link_to 'Log In', login_path %> or <br>
-      <%= link_to 'Sign Up', new_user_path %>
+      <%= link_to 'Log In', login_path %> or <%= link_to 'Sign Up', new_user_path %>
     <% end %>
         </li>
         </li>
