corrected bootstrap css variable

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -7,7 +7,7 @@ $white: white; $black: rgb(126, 18, 153);
 body { background: $black; color: $white; font-family: 'Merriweather', sans-serif; } 
 h1, h2 { font-weight: bold; } 
 p { font-size: 16px; color: $white; } 
-a:visited { color: $grey } 
+a:visited { color: $white } 
 .jumbotron { background: #0048CD; color: $white; text-align: center; 
 p { color: $white; font-size: 26px; } } .link { color: $white; } 
 
